# mypy-daemon-bug

./: README.rst  pyproject.toml
my_library/: with_failure.py  without_failure.py
tools/: requirements.dev.txt  venv
